--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Capture.png" alt="Profile Picture" height="200"></td>
+      <td><img src="Capture.PNG" alt="Profile Picture" height="200"></td>
       <td><h1>Yeshwanth S</h1>
       <p><em>Computer Science Engineer and learning <strong>Front-end development at <a href="www.appbrewery.co">APP BREWERY</a></strong>.</em></p>
 
