--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <li>Mycem, were i parsuing my Bachelore's in Engineering</li>
   </ul>
 
-  <a href="hobbies.html">My Hobbies</a>
+  <a href="hobbies.html">My Hbbies</a>
   <a href="Contact.html">Contact Me</a>
    <hr>
 
